--- a/style.css
+++ b/style.css
@@ -1,4 +1,14 @@
 /* Global */
+
+img[src$='.gif'],
+img[src$='.png'] {
+  image-rendering: -moz-crisp-edges; /* Firefox */
+  image-rendering: -o-crisp-edges; /* Opera */
+  image-rendering: -webkit-optimize-contrast; /* Webkit (non-standard naming) */
+  image-rendering: crisp-edges;
+  -ms-interpolation-mode: nearest-neighbor; /* IE (non-standard property) */
+}
+
 :root {
   /* Color */
   --color-white: #ffffff;
@@ -45,8 +55,18 @@ a {
 }
 
 ul {
-  list-style: none;
   padding-left: 0;
+}
+
+li {
+  list-style: none;
+}
+
+button {
+  background-color: transparent;
+  cursor: pointer;
+  border: none;
+  outline: none;
 }
 /* Typography */
 
@@ -100,6 +120,7 @@ p {
 .navbar_logo img {
   width: 32px;
   height: 32px;
+  text-align: center;
 }
 
 .navbar_menu_item {
@@ -115,4 +136,32 @@ p {
 
 .navbar_menu_item:hover {
   background-color: var(--color-dark-blue);
+}
+
+#home {
+  background: url('imgs/wave-haikei.png') center/cover no-repeat;
+  padding: 40px;
+  text-align: center;
+}
+
+.home_avatar {
+  width: 250px;
+  height: 250px;
+  border-radius: 50%;
+  border: 2px solid var(--color-light-white);
+}
+
+.home_title,
+.home_descripntion {
+  color: var(--color-light-white);
+}
+
+.home_contact {
+  color: var(--color-white);
+  font-size: var(--font-regular);
+  font-weight: var(--weight-regular);
+  margin: 24px;
+  padding: 8px 12px;
+  border: 2px solid var(--color-white);
+  border-radius: var(--size-border-radius);
 }
