--- a/style.css
+++ b/style.css
@@ -20,6 +20,7 @@ img[src$='.png'] {
   --color-light-grey: #7c7979;
   --color-blue: #73aace;
   --color-dark-blue: #1882eb;
+  --color-light-blue: #c3daf1;
   --color-yellow: #fff7d1;
   --color-orange: #feb546;
   --color-black: #000000;
@@ -171,6 +172,10 @@ p {
 .section {
   padding: 50px;
   text-align: center;
+  margin: auto;
+}
+
+.section_container {
   max-width: 1200px;
   margin: auto;
 }
@@ -235,4 +240,58 @@ p {
 
 .job_period {
   font-size: var(--font-micro);
+}
+
+#skills {
+  background-color: var(--color-light-blue);
+}
+
+.skillset {
+  display: flex;
+  background-color: var(--color-light-grey);
+  color: var(--color-white);
+  margin: 20px 40px;
+}
+
+.skillset_title {
+  color: var(--color-white);
+}
+
+.skillset_left {
+  flex-basis: 60%;
+  background-color: var(--color-dark-grey);
+  padding: 20px;
+}
+
+.skill {
+  margin-bottom: 8px;
+}
+
+.skill_description {
+  display: flex;
+  justify-content: space-between;
+}
+
+.skill_bar {
+  width: 100%;
+  height: 3px;
+  background-color: var(--color-grey);
+}
+
+.skill_value {
+  height: 3px;
+  background-color: var(--color-dark-blue);
+}
+
+.skillset_right {
+  flex-basis: 40%;
+}
+
+.tools {
+  background-color: var(--color-grey);
+}
+
+.tools,
+.etc {
+  padding: 20px;
 }
