--- a/style.css
+++ b/style.css
@@ -145,6 +145,7 @@ p {
   /* background: url('imgs/home_background.png') center/cover no-repeat; */
   padding: 40px;
   text-align: center;
+  background-color: var(--color-light-blue);
 }
 
 .home_avatar {
@@ -294,4 +295,100 @@ p {
 .tools,
 .etc {
   padding: 20px;
+}
+
+.work_categories {
+  margin: 40px;
+}
+
+.category_btn {
+  border: 1px solid var(--color-dark-white);
+  border-radius: var(--size-border-radius);
+  font-size: var(--font-regular);
+  padding: 8px 48px;
+  box-shadow: 1px 1px 1px 1px var(--color-light-grey);
+}
+
+.category_btn.active,
+.category_btn:hover {
+  background-color: var(--color-blue);
+  color: var(--color-white);
+}
+
+.category_btn.active .category_count,
+.category_btn:hover .category_count {
+  opacity: 1;
+  top: 0;
+}
+.category_count {
+  background-color: var(--color-orange);
+  border-radius: 50%;
+  color: var(--color-white);
+  width: 24px;
+  height: 24px;
+  line-height: 24px;
+  display: inline-block;
+  position: relative;
+  top: -20px;
+  left: 4px;
+  opacity: 0;
+  transition: all var(--animation-duration) ease-in;
+}
+
+.works_projects {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+.project {
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 280px;
+  height: 250px;
+  margin: 2px;
+  background-color: var(--color-light-white);
+}
+
+.project_img {
+  max-width: 100%;
+  max-height: 100%;
+}
+
+.project_description {
+  position: absolute;
+  background-color: var(--color-black);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  opacity: 0;
+  transform: translateY(10px);
+  transition: all var(--animation-duration) ease-in;
+}
+
+.project:hover .project_description {
+  transform: translateY(0);
+  opacity: 0.8;
+}
+
+.project_description h3 {
+  color: var(--color-white);
+}
+
+.project_description h3::after {
+  content: '';
+  display: block;
+  position: relative;
+  left: 50%;
+  width: 25px;
+  height: 2px;
+  margin-left: -12px;
+  margin-top: 8px;
+  background-color: var(--color-dark-white);
 }
