--- a/style.css
+++ b/style.css
@@ -392,3 +392,28 @@ p {
   margin-top: 8px;
   background-color: var(--color-dark-white);
 }
+
+#contact {
+  background-color: var(--color-blue);
+}
+
+.contact_title,
+.contact_eamil,
+.contact_rights {
+  color: var(--color-white);
+}
+
+.contact_title {
+  margin: 30px 0;
+}
+
+.contact_link {
+  font-size: var(--font-large);
+  margin: 24px 0;
+}
+
+.contact_link i:hover {
+  transform: scale(1.1);
+  color: var(--color-dark-blue);
+  transition: all var(--animation-duration) ease-in;
+}
