--- a/style.css
+++ b/style.css
@@ -141,6 +141,15 @@ p {
   background-color: var(--color-dark-blue);
 }
 
+.navbar_toggle_btn {
+  position: absolute;
+  top: 24px;
+  right: 32px;
+  font-size: 24px;
+  color: var(--color-white);
+  display: none;
+}
+
 #home {
   /* background: url('imgs/home_background.png') center/cover no-repeat; */
   padding: 40px;
@@ -416,4 +425,38 @@ p {
   transform: scale(1.1);
   color: var(--color-dark-blue);
   transition: all var(--animation-duration) ease-in;
+}
+
+@media screen and (max-width: 786px) {
+  .navbar_toggle_btn {
+    display: block;
+  }
+
+  #navbar {
+    flex-direction: column;
+    align-items: flex-start;
+  }
+
+  .navbar_menu {
+    flex-direction: column;
+    text-align: center;
+    width: 100%;
+    display: none;
+  }
+
+  .about_majors {
+    flex-direction: column;
+  }
+
+  .major {
+    margin-bottom: 38px;
+  }
+
+  .skillset {
+    flex-direction: column;
+  }
+
+  .project {
+    flex-grow: 1;
+  }
 }
