--- a/style.css
+++ b/style.css
@@ -103,12 +103,20 @@ p {
 
 /* Navbar */
 #navbar {
+  position: fixed;
+  width: 100%;
   display: flex;
   justify-content: space-between;
-  background-color: var(--color-blue);
+  background-color: transparent;
   align-items: center;
   color: var(--color-white);
   padding: 16px;
+  transition: all var(--animation-duration) ease-in-out;
+}
+
+#navbar.navbar_dark {
+  background-color: var(--color-light-blue);
+  padding: 8px;
 }
 
 .navbar_menu {
@@ -153,6 +161,7 @@ p {
 #home {
   /* background: url('imgs/home_background.png') center/cover no-repeat; */
   padding: 40px;
+  padding-top: 120px;
   text-align: center;
   background-color: var(--color-light-blue);
 }
