--- a/style.css
+++ b/style.css
@@ -437,6 +437,26 @@ p {
   transition: all var(--animation-duration) ease-in;
 }
 
+.arrow_up {
+  position: fixed;
+  bottom: 50px;
+  right: 50px;
+  width: 70px;
+  height: 70px;
+  font-size: 50px;
+  color: var(--color-white);
+  background-color: var(--color-blue);
+  border-radius: 50%;
+  opacity: 0;
+  pointer-events: none;
+  transition: all var(--animation-duration) ease-in;
+}
+
+.arrow_up.visible {
+  opacity: 1;
+  pointer-events: auto;
+}
+
 @media screen and (max-width: 786px) {
   .navbar_toggle_btn {
     display: block;
