--- a/style.css
+++ b/style.css
@@ -371,6 +371,10 @@ p {
   background-color: var(--color-light-white);
 }
 
+.project.invisible {
+  display: none;
+}
+
 .project_img {
   max-width: 100%;
   max-height: 100%;
