--- a/style.css
+++ b/style.css
@@ -139,15 +139,13 @@ p {
   padding: 8px 12px;
   margin: 0 4px;
   cursor: pointer;
+  border: 1px solid transparent;
   border-radius: var(--size-border-radius);
-}
-
-.navbar_menu_item.active {
-  border: 1px solid var(--color-white);
 }
 
 .navbar_menu_item:hover {
   background-color: var(--color-dark-blue);
+  border: 1px solid var(--color-dark-blue);
 }
 
 .navbar_toggle_btn {
@@ -328,7 +326,7 @@ p {
   box-shadow: 1px 1px 1px 1px var(--color-light-grey);
 }
 
-.category_btn.active,
+.category_btn.selected,
 .category_btn:hover {
   background-color: var(--color-blue);
   color: var(--color-white);
@@ -358,6 +356,13 @@ p {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
+  opacity: 1;
+  transition: all var(--animation-duration) ease-out;
+}
+
+.works_projects.anim_out {
+  opacity: 0;
+  transform: scale(0.98) translateY(40px);
 }
 
 .project {
@@ -401,7 +406,7 @@ p {
 }
 
 .project_description h3 {
-  color: var(--color-white);
+  color: var(--color-orange);
 }
 
 .project_description h3::after {
@@ -409,9 +414,9 @@ p {
   display: block;
   position: relative;
   left: 50%;
-  width: 25px;
+  width: 50px;
   height: 2px;
-  margin-left: -12px;
+  transform: translateX(-50%);
   margin-top: 8px;
   background-color: var(--color-dark-white);
 }
@@ -469,6 +474,11 @@ p {
   #navbar {
     flex-direction: column;
     align-items: flex-start;
+    background-color: var(--color-blue);
+  }
+
+  #navbar.navbar_dark {
+    padding: 16px;
   }
 
   .navbar_menu {
@@ -476,6 +486,10 @@ p {
     text-align: center;
     width: 100%;
     display: none;
+  }
+
+  .navbar_menu.open {
+    display: block;
   }
 
   .about_majors {
