--- a/style.css
+++ b/style.css
@@ -70,6 +70,7 @@ button {
   cursor: pointer;
   border: none;
   outline: none;
+  padding: 0;
 }
 /* Typography */
 
@@ -120,7 +121,7 @@ p {
   padding: 8px;
 }
 
-.navbar_menu {
+.navbar_menu1 {
   display: flex;
 }
 
@@ -141,6 +142,10 @@ p {
   cursor: pointer;
   border: 1px solid transparent;
   border-radius: var(--size-border-radius);
+}
+
+.navbar_menu_item.active {
+  border: 1px solid var(--color-white);
 }
 
 .navbar_menu_item:hover {
@@ -185,6 +190,11 @@ p {
   padding: 8px 12px;
   border: 2px solid var(--color-black);
   border-radius: var(--size-border-radius);
+}
+
+.home_contact:hover {
+  border: 2px solid var(--color-white);
+  color: var(--color-white);
 }
 
 .section {
@@ -324,6 +334,7 @@ p {
   font-size: var(--font-regular);
   padding: 8px 48px;
   box-shadow: 1px 1px 1px 1px var(--color-light-grey);
+  position: relative;
 }
 
 .category_btn.selected,
@@ -345,9 +356,8 @@ p {
   height: 24px;
   line-height: 24px;
   display: inline-block;
-  position: relative;
-  top: -20px;
-  left: 4px;
+  position: absolute;
+  right: 16px;
   opacity: 0;
   transition: all var(--animation-duration) ease-in;
 }
@@ -466,7 +476,16 @@ p {
   pointer-events: auto;
 }
 
+/* 반응형 */
 @media screen and (max-width: 786px) {
+  :root {
+    --font-large: 30px;
+    --font-medium: 18px;
+    --font-regular: 16px;
+    --font-small: 14px;
+    --font-micro: 12px;
+  }
+
   .navbar_toggle_btn {
     display: block;
   }
@@ -475,6 +494,10 @@ p {
     flex-direction: column;
     align-items: flex-start;
     background-color: var(--color-blue);
+  }
+
+  .navbar_menu1 {
+    flex-direction: column;
   }
 
   #navbar.navbar_dark {
@@ -494,17 +517,37 @@ p {
 
   .about_majors {
     flex-direction: column;
+    margin-top: 30px;
+    margin-bottom: 0px;
   }
 
   .major {
-    margin-bottom: 38px;
+    margin-bottom: 30px;
   }
 
   .skillset {
     flex-direction: column;
   }
 
+  .category_btn {
+    margin: 4px 0;
+  }
+
   .project {
     flex-grow: 1;
+  }
+
+  .section {
+    padding: 16px;
+    padding-top: 55px;
+  }
+
+  .arrow_up {
+    width: 50px;
+    height: 50px;
+    font-size: 30px;
+    line-height: 50px;
+    right: 16px;
+    bottom: 16px;
   }
 }
