--- a/style.css
+++ b/style.css
@@ -585,6 +585,12 @@ p {
   .name {
     font-size: var(--font-large);
   }
+  .about__jobs {
+    margin-top: 20px;
+  }
+  .job_logo {
+    width: 130px;
+  }
 
   .about_majors {
     flex-direction: column;
