--- a/style.css
+++ b/style.css
@@ -208,94 +208,6 @@ p {
   margin: auto;
 }
 
-.about_majors {
-  display: flex;
-  justify-content: space-between;
-  flex-wrap: wrap;
-  margin: 80px 0;
-}
-.major div {
-  margin: 15px;
-}
-
-.major img {
-  width: 400px;
-}
-
-.major_img_front {
-  width: 420px;
-  height: 170px;
-  line-height: 170px;
-  font-size: 70px;
-  background-color: var(--color-white);
-  color: var(--color-blue);
-  border: 2px solid var(--color-white);
-  border-radius: var(--size-border-radius);
-  box-shadow: 1rem 1rem 1rem 0 rgb(68 68 68 / 20%);
-  margin-bottom: 16px;
-}
-
-.major_img_back {
-  width: 420px;
-  height: 750px;
-  line-height: 750px;
-  font-size: 70px;
-  background-color: var(--color-white);
-  color: var(--color-blue);
-  border: 2px solid var(--color-white);
-  border-radius: var(--size-border-radius);
-  box-shadow: 1rem 1rem 1rem 0 rgb(68 68 68 / 20%);
-  margin-bottom: 16px;
-}
-
-.major_img_version {
-  width: 420px;
-  height: 250px;
-  line-height: 250px;
-  font-size: 70px;
-  background-color: var(--color-white);
-  color: var(--color-blue);
-  border: 2px solid var(--color-white);
-  border-radius: var(--size-border-radius);
-  box-shadow: 1rem 1rem 1rem 0 rgb(68 68 68 / 20%);
-  margin-bottom: 30px;
-}
-
-.major_img_certificate {
-  width: 420px;
-  height: 250px;
-  line-height: 250px;
-  font-size: 70px;
-  background-color: var(--color-white);
-  color: var(--color-blue);
-  border: 2px solid var(--color-white);
-  border-radius: var(--size-border-radius);
-  box-shadow: 1rem 1rem 1rem 0 rgb(68 68 68 / 20%);
-  margin-bottom: 16px;
-}
-
-.major_img_certificate p {
-  color: var(--color-black);
-}
-
-.major_img_front:hover,
-.major_img_back:hover,
-.major_img_version:hover,
-.major_img_certificate:hover {
-  transform: translateY(10px);
-  transition: all var(--animation-duration) ease-in-out;
-}
-
-.major_title,
-.major_deccription {
-  color: var(--color-light-white);
-  font-weight: bolder;
-}
-
-.major_deccription {
-  font: var(--font-small);
-}
-
 .job {
   display: flex;
   align-items: center;
@@ -358,33 +270,106 @@ p {
   margin-bottom: 8px;
 }
 
-.skill_description {
+.about_majors {
   display: flex;
   justify-content: space-between;
+  flex-flow: wrap;
+  align-content: space-around;
+  margin: 80px auto;
+}
+.major div {
+  margin: 15px;
 }
 
-.skill_bar {
-  width: 100%;
-  height: 3px;
-  background-color: var(--color-grey);
+.major img {
+  width: 350px;
 }
 
-.skill_value {
-  height: 3px;
-  background-color: var(--color-dark-blue);
+.major_img_front {
+  width: 400px;
+  height: 150px;
+  line-height: 170px;
+  font-size: 70px;
+  background-color: var(--color-white);
+  color: var(--color-blue);
+  border: 2px solid var(--color-white);
+  border-radius: var(--size-border-radius);
+  box-shadow: 1rem 1rem 1rem 0 rgb(68 68 68 / 20%);
+  margin-bottom: 16px;
 }
 
-.skillset_right {
-  flex-basis: 40%;
+.major_img_back {
+  width: 400px;
+  height: 650px;
+  padding-top: 10px;
+  line-height: 750px;
+  font-size: 70px;
+  background-color: var(--color-white);
+  color: var(--color-blue);
+  border: 2px solid var(--color-white);
+  border-radius: var(--size-border-radius);
+  box-shadow: 1rem 1rem 1rem 0 rgb(68 68 68 / 20%);
+  margin-bottom: 16px;
 }
 
-.tools {
-  background-color: var(--color-grey);
+.major_img_version {
+  width: 400px;
+  height: 230px;
+  line-height: 250px;
+  font-size: 70px;
+  background-color: var(--color-white);
+  color: var(--color-blue);
+  border: 2px solid var(--color-white);
+  border-radius: var(--size-border-radius);
+  box-shadow: 1rem 1rem 1rem 0 rgb(68 68 68 / 20%);
+  margin-bottom: 30px;
 }
 
-.tools,
-.etc {
-  padding: 20px;
+.major_img_version img {
+  margin-top: 5px;
+  margin-left: 5px;
+}
+
+.major_img_certificate {
+  width: 400px;
+  height: 150px;
+  line-height: 150px;
+  font-size: 70px;
+  background-color: var(--color-white);
+  color: var(--color-blue);
+  border: 2px solid var(--color-white);
+  border-radius: var(--size-border-radius);
+  box-shadow: 1rem 1rem 1rem 0 rgb(68 68 68 / 20%);
+  margin-bottom: 16px;
+}
+
+.major_img_back,
+.major_img_front,
+.major_img_version,
+.major_img_certificate {
+  margin: 0 auto;
+}
+
+.major_img_certificate p {
+  color: var(--color-black);
+}
+
+.major_img_front:hover,
+.major_img_back:hover,
+.major_img_version:hover,
+.major_img_certificate:hover {
+  transform: translateY(10px);
+  transition: all var(--animation-duration) ease-in-out;
+}
+
+.major_title,
+.major_deccription {
+  color: var(--color-light-white);
+  font-weight: bolder;
+}
+
+.major_deccription {
+  font: var(--font-small);
 }
 
 .work_categories {
@@ -540,6 +525,61 @@ p {
 }
 
 /* 반응형 */
+
+@media (max-width: 1164px) {
+  .about_majors {
+    flex-direction: column;
+    margin-top: 30px;
+    margin-bottom: 0px;
+  }
+
+  .major {
+    margin-bottom: 20px;
+  }
+
+  .major img {
+    width: 300px;
+  }
+
+  .major div {
+    margin: auto;
+  }
+  .major_img_back {
+    width: 300px;
+    height: 550px;
+  }
+  .major_img_front {
+    width: 300px;
+    height: 120px;
+  }
+  .major_img_version {
+    width: 300px;
+    height: 190px;
+    margin-bottom: 30px;
+  }
+  .major_img_version img {
+    margin-top: 5px;
+    margin-left: 5px;
+  }
+  .major_img_certificate {
+    width: 300px;
+    height: 100px;
+    line-height: 100px;
+  }
+
+  .major_img_back:hover,
+  .major_img_front:hover,
+  .major_img_version:hover,
+  .major_img_certificate:hover {
+    transform: none;
+    transition: none;
+  }
+
+  .skillset {
+    flex-direction: column;
+  }
+}
+
 @media screen and (max-width: 786px) {
   :root {
     --font-large: 30px;
