--- a/style.css
+++ b/style.css
@@ -146,6 +146,8 @@ p {
 
 .navbar_menu_item.active {
   border: 1px solid var(--color-white);
+  background-color: var(--color-white);
+  color: var(--color-dark-blue);
 }
 
 .navbar_menu_item:hover {
