--- a/style.css
+++ b/style.css
@@ -165,7 +165,6 @@ p {
 }
 
 #home {
-  /* background: url('imgs/home_background.png') center/cover no-repeat; */
   padding: 40px;
   padding-top: 120px;
   text-align: center;
@@ -176,7 +175,7 @@ p {
   width: 250px;
   height: 250px;
   border-radius: 50%;
-  border: 2px solid var(--color-black);
+  border: 4px solid var(--color-white);
 }
 
 .home_title,
