--- a/style.css
+++ b/style.css
@@ -429,10 +429,13 @@ p {
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 280px;
-  height: 250px;
+  width: 500px;
+  height: 500px;
   margin: 2px;
   background-color: var(--color-light-white);
+}
+
+.projects {
 }
 
 .project.invisible {
